--- a/README
+++ b/README
@@ -5,6 +5,9 @@
 'ziektes onder dwang verspreiden'
 
 
+# desiderius erasmus
+https://en.wikipedia.org/wiki/Desiderius_Erasmus
+
 # serial killer
 https://en.wikipedia.org/wiki/Serial_killer
 
