--- a/README
+++ b/README
@@ -11,4 +11,7 @@ https://en.wikipedia.org/wiki/Desiderius_Erasmus
 # serial killer
 https://en.wikipedia.org/wiki/Serial_killer
 
+# rotterdam
+https://nl.wikipedia.org/wiki/Rotterdam
+
 balkenende lijn ® 2002-2021
