--- a/README
+++ b/README
@@ -8,6 +8,9 @@
 # desiderius erasmus
 https://en.wikipedia.org/wiki/Desiderius_Erasmus
 
+# boumanggz
+https://nl.wikipedia.org/wiki/Bouman_GGZ
+
 # serial killer
 https://en.wikipedia.org/wiki/Serial_killer
 
