--- a/README
+++ b/README
@@ -6,6 +6,9 @@
 # desiderius erasmus
 https://en.wikipedia.org/wiki/Desiderius_Erasmus
 
+# ventral tegmental area
+https://en.wikipedia.org/wiki/Ventral_tegmental_area
+
 # boumanggz
 https://nl.wikipedia.org/wiki/Bouman_GGZ
 
