--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 | balkenende-lijn |
 -------------------
 
-'kanker verspreidende dwangmedicatie'
+'neurodegenerating dwangmedicatie'
 
 
 # desiderius erasmus
