--- a/README
+++ b/README
@@ -17,6 +17,9 @@ https://nl.wikipedia.org/wiki/Bouman_GGZ
 # serial killer
 https://en.wikipedia.org/wiki/Serial_killer
 
+# psycho
+https://en.wikipedia.org/wiki/Psycho_(Muse_song)
+
 # rotterdam
 https://nl.wikipedia.org/wiki/Rotterdam
 
